k8s/v1/bookcatalogue-v-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-catalogue-deployment
  labels:
    name: book-catalogue
spec:
  selector:
    matchLabels:
      app: book-catalogue
  template:
    metadata:
      name: book-catalogue
      labels:
        app: book-catalogue
    spec:
      containers:
        - name: book-catalogue
          image: anonymousliem/bookcatalogue:v1.0
          ports:
            - containerPort: 6000
          resources:
            limits:
              cpu: "1000m"  
              memory: "1000Mi"  
            requests:
              cpu: "1000m" 
              memory: "1000Mi" 
          livenessProbe:
            httpGet:
              path: /
              port: 6000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 6000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3

---

apiVersion: v1
kind: Service
metadata:
  name: book-catalogue-service
spec:
  type: NodePort
  selector:
    app: book-catalogue
  ports:
    - port: 80
      targetPort: 6000
      nodePort: 30001

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: book-catalogue-ingress
  labels:
    name: book-catalogue-ingress
spec:
  rules:
    - host: bookcatalogue.anonymousliem.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: book-catalogue-service
                port:
                  number: 80
